--- a/users/templates/users/keybindings.html
+++ b/users/templates/users/keybindings.html
@@ -21,6 +21,7 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 -->
+<!-- This is a markdown generated html -->
 <style>
 code {
   color: #c7254e;
@@ -35,6 +36,7 @@ th {
   padding: 10px;
 }
 </style>
+
 <div class="container-fluid">
   <center><h4 id="we-support-sublime-key-bindings-">We support Sublime key bindings!</h4></center>
   <table class="table table-bordered">
