--- a/users/templates/users/confirm.html
+++ b/users/templates/users/confirm.html
@@ -21,7 +21,7 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 -->
-% extends "index/base.html" %}
+{% extends "index/base.html" %}
 {% load static %}
 {% load profile_filters %}
 
