rename index.js to base.js and add index.js

--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -45,7 +45,7 @@ SOFTWARE.
     </script>
     <link rel="stylesheet" href={% static "./css/mfp-fade.css"%}>
     <script src={% static "./js/popup-setting.js"%}></script>
-    <script src={% static "./js/index.js"%}></script>
+    <script src={% static "./js/base.js"%}></script>
     <link rel="stylesheet" href={% static "./css/index.css"%} media="screen">
     {% block import_source %}
     {% endblock import_source %}
