--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -30,10 +30,10 @@ SOFTWARE.
 {% endblock title_name %}
 {% block import_source %}
 {% endblock import_source %}
-
+<script src={% static "./js/index.js"%}></script>
 {% block body_block %}
   <!-- clock -->
-  
+
   <input type="text" id="alert_info" value="{{alert_info}}" />
   <div class="gray">
   </div>
