--- a/users/templates/users/notification.html
+++ b/users/templates/users/notification.html
@@ -92,7 +92,7 @@ SOFTWARE.
               <tr>
               {% endif %}
                 <td colspan=2 style="text-align: right;">
-                  <input type="button" value="delete" class="btn btn-default"
+                  <input type="button" value="delete" class="btn btn-primary"
                          onclick="delete_notification(document.urform.del);"
                          style="margin-left:0px;margin-top: 30px;" >
                 </td>
@@ -142,7 +142,7 @@ SOFTWARE.
               <tr>
               {% endif %}
                 <td colspan=2 style="text-align: right;">
-                  <input type="button" value="delete" class="btn btn-default"
+                  <input type="button" value="delete" class="btn btn-primary"
                          onclick="delete_notification(document.allform.del);"
                          style="margin-left:0px;margin-top: 30px;" >
                 </td>
