--- a/users/static/css/notification.css
+++ b/users/static/css/notification.css
@@ -21,6 +21,11 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 */
+.notification-container {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  min-height: 500px;
+}
 #nav_tab {
   margin: -1px;
 }
