--- a/problem/templates/problem/problem.html
+++ b/problem/templates/problem/problem.html
@@ -125,21 +125,7 @@ SOFTWARE.
 </div>
 </body>
 <script>
-$(document).ready(function() {
-    $("#addTagButton").click(function() {
-        var new_tag = $('#newTag').val().trim();
-        if (new_tag == '') return false;
-        $.ajax({
-            url: "/problem/{{problem.pk}}/tag/",
-            data: $("#addTag").serialize(),
-            type: "POST",
-            success: function(msg) {
-              var new_tag_span = "<span class='label label-info'>"+new_tag+"</span>"
-              $("#tags").append(new_tag_span);
-            }
-        });    
-        $("#newTag").val("");
-        return false;
-    });
-});
+var pid = {{problem.pk}};
 </script>
+<script src="{% static 'problem/js/problem.js' %}"></script>
+
