--- a/problem/templates/problem/preview.html
+++ b/problem/templates/problem/preview.html
@@ -22,7 +22,7 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 -->
 {% extends 'problem/base.html' %} {% block body_block %}
-<div id="Body">
+<div class="container" id="Body">
   {% include 'problem/problem.html' %}
 </div>
 <script>
